--- a/etc/helm/pachyderm/templates/ingress/tls-secret.yaml
+++ b/etc/helm/pachyderm/templates/ingress/tls-secret.yaml
@@ -9,7 +9,7 @@ SPDX-License-Identifier: Apache-2.0
 {{- if and (not .Values.ingress.tls.newSecret.create) .Values.ingress.tls.newSecret.key }}
   {{ fail "Must set ingress.tls.newSecret.create to true when specifying ingress.tls.newSecret.key "}}
 {{ end -}}
-{{- if .Values.dash.enabled -}}
+{{- if .Values.console.enabled -}}
 {{- if and .Values.ingress.tls.enabled .Values.ingress.tls.newSecret.create }}
 apiVersion: "v1"
 data:
@@ -18,7 +18,7 @@ data:
 kind: Secret
 metadata:
   labels:
-    app: "dash"
+    app: "console"
     suite: "pachyderm"
   name: {{ required "When ingress.tls.enabled you must specify ingress.tls.secretName" .Values.ingress.tls.secretName | quote }}
 {{ end -}}
